dark mode fix

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,8 @@
+.mainContainer {
+  background-color: black;
+}
+
+
 .container {
   background-color: black;
 }
